# Dao

./: .gitignore  CmakeLists.txt
engine/: CMakeLists.txt  CmakeLists.txt
engine/asset/global/: particle.global.json  rendering.global.json
engine/asset/level/: default.level.json
engine/asset/material/: gold.material.json  grass.material.json  nanosuit.material.json  planet.material.json  plastic.material.json  robot.material.json  rock.material.json  silver.material.json  wall.material.json  white.material.json
engine/asset/mesh/animation/: W2_CrouchWalk_Aim_F_Loop_IP.animation_clip.json  anim.skeleton_map.json  anim.skeleton_mask.json
engine/asset/object/character/: player.object.json
engine/asset/object/environment/: fence.object.json  floor.object.json  nanosuit.object.json  particle.object.json  planet.object.json  rock.object.json  stairs.object.json  wall.object.json  wall_block.object.json  wall_with_door.object.json  wall_with_window.object.json
engine/asset/world/: default.world.json
engine/config/: DaoEditor.ini
engine/shader/: CMakeLists.txt
engine/shader/glsl/: axis.frag  axis.vert  color_grading.frag  combine_ui.frag  deferred_lighting.frag  deferred_lighting.vert  fxaa.frag  fxaa.vert  mesh.frag  mesh.vert  mesh_directional_light_shadow.frag  mesh_directional_light_shadow.vert  mesh_gbuffer.frag  mesh_inefficient_pick.frag  mesh_inefficient_pick.vert  mesh_point_light_shadow.frag  mesh_point_light_shadow.geom  mesh_point_light_shadow.vert  particle_emit.comp  particle_kickoff.comp  particle_simulate.comp  particlebillboard.frag  particlebillboard.vert  post_process.vert  skybox.frag  skybox.vert  tone_mapping.frag
engine/shader/include/: constants.h  gbuffer.h  mesh_lighting.h  mesh_lighting.inl  structures.h
engine/source/: CmakeLists.txt
engine/source/editor/: CMakeLists.txt  CmakeLists.txt  editor.cpp  editor.h  editor_axis.cpp  editor_axis.h  editor_file_service.cpp  editor_file_service.h  editor_global_context.cpp  editor_global_context.h  editor_input_manager.cpp  editor_input_manager.h  editor_scene_manager.cpp  editor_scene_manager.h  editor_ui.cpp  editor_ui.h  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/language_types/: class.cpp  field.cpp
engine/source/meta_parser/parser/template_manager/: template_manager.cpp
engine/source/meta_parser/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  CmakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/meta/: test.cpp  test.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/framework/object/: object.cpp  object_id_allocator.cpp  object_id_allocator.h
engine/source/runtime/function/animation/: animation_loader.cpp  animation_loader.h  animation_manager.cpp  animation_manager.h  bone.cpp  bone.h  node.cpp  node.h  skeleton.cpp  skeleton.h  utilities.cpp  utilities.h
engine/source/runtime/function/character/: character.cpp  character.h
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h  controller.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/level/: level.cpp  level.h
engine/source/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
engine/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/particle/: emitter_id_allocator.cpp  emitter_id_allocator.h  particle_common.h  particle_desc.h  particle_manager.cpp  particle_manager.h
engine/source/runtime/function/physics/: physics_config.h  physics_manager.cpp  physics_manager.h  physics_scene.cpp  physics_scene.h
engine/source/runtime/function/physics/jolt/: utils.cpp  utils.h
engine/source/runtime/function/render/: render_camera.cpp  render_camera.h  render_common.h  render_debug_config.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_light.h  render_mesh.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h  z_test.cpp
engine/source/runtime/function/render/interface/: rhi.h  rhi_class.h  rhi_type.h
engine/source/runtime/function/ui/: window_ui.h
engine/source/runtime/platform/file_service/: file_service.cpp  file_service.h
engine/source/runtime/platform/file_system/: file_system.cpp
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.h  config_maneger.cpp
(+69 files in other folders)
